get engagement by service provider id
